--- a/other_pj.html
+++ b/other_pj.html
@@ -35,8 +35,20 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Smaller Projects</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>first par.</p>
+							<section>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic11.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic12.jpg" alt="" /></span></div>
+									</div>
+								</div>
+							<p>The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
+								of them are from free download sources off the internet.
+							</p>
 							<p>second par.</p>
 						</div>
 					</section>
