--- a/soc.html
+++ b/soc.html
@@ -36,8 +36,16 @@
 						<div class="inner">
 							<h1 class="major">Spirit of Calamity</h1>
 							<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
-							<p>first par.</p>
-							<p>second par.</p>
+							<p>A restless spirit is rare a spirit that embodies the soul of it's host. It is summoned after the host's demise only if the death was caused by great distress
+								or some kind of important duty was not fullfilled. It's is true, its origins remain unknown but some say this spirit is a division of some kind of Spirit of Calamity; a very powerful
+								spirit that is capable of having the abilities of a demi-god. As a restless spirit, the player traverses a large castle where many untold horrors lie. Your goal is to
+								find why you were summoned and to carry out your destiny.
+							<p>Spirit of Calamity is perhaps the sole idea of what really got me into game design. As a child I have been facinated with my ability to create intricate worlds and
+								plots that even surprise me at times. And because in a video game you can create just that and whatever you can imagine, I never doubted becoming a game designer was
+								the career path for me. Spirit of Calamity is the birth of my creativity, it's a world I've fantasized about as a teenager and one I wish to see badly come to life. 
+								I could spend countless hours talking about the lore and story of the game. This is the game I'm most passionate about and I won't settle for less than <strike>perfect</strike>
+								*nearly perfect*.
+							</p>
 						</div>
 					</section>
 
