--- a/tiny_knight.html
+++ b/tiny_knight.html
@@ -36,8 +36,12 @@
 						<div class="inner">
 							<h1 class="major">Tiny Knight</h1>
 							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
-							<p>first par.</p>
-							<p>second par.</p>
+							<p>Tiny Kight -- Press Start to Play -- The princess must be saved! Nothing chiche here.</p>
+							<p>Tiny Kight is a very small game I'm making for experience with the Unity engine and Top Down RPGs. Currently it's the game I'm working on
+								most of the time but much of the code and mechanics I plan to transfer to Spirit of Calamity. Some of the features I have included right now are: Player movement
+								and combat, Enemy movement and Combat, Doors and Keys, etc.
+							</p>
+							<li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</div>
 					</section>
 
