--- a/tiny_knight.html
+++ b/tiny_knight.html
@@ -41,7 +41,9 @@
 								most of the time but much of the code and mechanics I plan to transfer to Spirit of Calamity. Some of the features I have included right now are: Player movement
 								and combat, Enemy movement and Combat, Doors and Keys, etc.
 							</p>
-							<li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<ul class="icons">
+								<li><a href="https://github.com/MaDness1184/Tiny-Knight" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 						</div>
 					</section>
 
