--- a/tiny_knight.html
+++ b/tiny_knight.html
@@ -42,7 +42,7 @@
 								and combat, Enemy movement and Combat, Doors and Keys, etc.
 							</p>
 							<ul class="icons">
-								<li><a href="https://github.com/MaDness1184/Tiny-Knight" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Repository Link - <a href="https://github.com/MaDness1184/Tiny-Knight" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 					</section>
