--- a/soc.html
+++ b/soc.html
@@ -42,7 +42,7 @@
 								find why you were summoned and to carry out your destiny.
 							<p>Spirit of Calamity is perhaps the sole idea of what really got me into game design. As a child I have been facinated with my ability to create intricate worlds and
 								plots that even surprise me at times. And because in a video game you can create just that and whatever you can imagine, I never doubted becoming a game designer was
-								the career path for me. Spirit of Calamity is the birth of my creativity, it's a world I've fantasized about as a teenager and one I wish to see badly come to life. 
+								the career path for me. Spirit of Calamity is the birth of my creativity, it's a world I've fantasized about since I was a teenager and one I wish to see badly come to life. 
 								I could spend countless hours talking about the lore and story of the game. This is the game I'm most passionate about and I won't settle for less than <strike>perfect</strike>
 								*nearly perfect*.
 							</p>
