Spirit of Calamity GitHub Link

--- a/soc.html
+++ b/soc.html
@@ -46,6 +46,9 @@
 								I could spend countless hours talking about the lore and story of the game. This is the game I'm most passionate about and I won't settle for less than <strike>perfect</strike>
 								*nearly perfect*.
 							</p>
+							<ul class="icons">
+								<li>Repository Link - <a href="https://github.com/MaDness1184/Spirit-of-Calamity" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 						</div>
 					</section>
 
