Added More Git Links

--- a/angry_apple.html
+++ b/angry_apple.html
@@ -41,6 +41,9 @@
 							 Angry Apple to challenge other games like it. What makes this game unique is it's intricate approach to making the combat system smooth and engaging while also keeping a comedic theme throughout.
 							</p>
 							<p>Features I have so far: Platforming physics, hazards and traps, broccoli enemy and animations, player attack animations, player hurt and death animations, working ladders, and rising water.</p>
+							<ul class="icons">
+								<li>Repository Link - <a href="https://github.com/MaDness1184/Angry-Apple-PTE-" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 						</div>
 					</section>
 
