--- a/other_pj.html
+++ b/other_pj.html
@@ -49,6 +49,9 @@
 							<p>The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
 								of them are from free download sources off the internet.
 							</p>
+							<ul class="icons">
+								<li>Repository Link - <a href="https://github.com/MaDness1184" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 							<p></p>
 						</div>
 					</section>
