--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a Computer Science major studying at Orange Coast Collage. My dream job is becoming a indie developer and maybe starting a game design business some day. I've been creating games since I was
-								17 using Unity's 2D developement features. </p>
+							<p>Hi, I am a Computer Science student studying at Orange Coast Collage. My dream is to become a indie developer and maybe start a game design business in the future. I've been creating games since I was
+								16 using Unity's 2D developement features. </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
-									<p>Languages that I am proficient in: C#, C++. Other languages that I have studied: Python, Java, C, HTML, MIPS.</p>
+									<p>Languages that I am proficient in: C#, C++. Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Unity</h3>
-									<p>Over 3 years of experience with Unity2D. All projects below are made in Unity.</p>
+									<p>Over 3 years of experience with Unity2D. All projects below are made using Unity2D.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>School</h3>
 									<p>Studied Computer Science for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA. 
-										Currently studying at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa. Plan to transfer after next semester.</p>
+										Currently studying at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.1</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
@@ -110,7 +110,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Angry Apple</h2>
-									<p>A smaller project that I have abandoned but it still has alot of features built into it like traps, Smash Bro's like combat, 
+									<p>A smaller project that I have abandoned but it still has alot of features built into it like traps, combat, 
 										custom sprites and tilesets, and a pretty funny death animation. All code and artwork are my own.</p>
 									<ul class="actions">
 										<li><a href="angry_apple.html" class="button">Learn more</a></li>
