Update to Homepage pt.2

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Smaller Projects</h2>
-									<p>A collection of smaller projects that are from tutorials and courses. Some of the artwork is mine and some downloaded from free sources.</p>
+									<p>A collection of smaller projects that are from tutorials and courses. Most artwork is mine but some downloaded from free game asset sources.</p>
 									<ul class="actions">
 										<li><a href="other_pj.html" class="button">Learn more</a></li>
 									</ul>
