Website Homepage Update 8/22
- Update Homepage
 - Added Projects
 - Updated Project Descriptions
 - Updated "About Me"

--- a/index.html
+++ b/index.html
@@ -31,39 +31,42 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Intro -->
+				<!-- Welcome -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Ryan's Portfolio</h1>
-							<p>A collection of Ryan Carpenter's development projects using the <a href="#https://unity.com/">Unity Engine</a>.</p>
+							<p>A collection of Ryan Carpenter's development and experience with projects using the <a href="#https://unity.com/">Unity Engine</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- One -->
+				<!-- About Me -->
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a Computer Science student studying at Orange Coast Collage. My dream is to become a indie developer and maybe start a game design business in the future. I've been creating games since I was
-								16 using Unity's 2D developement features. </p>
+							<p>Hi, I am a Computer Science student studying at Arizona State University. My dream is to become a indie developer and start a game design business. I've been interest in creating games
+								for as long as I can remember and finally began making my dream a reality when I started developing with Unity at 18 year old. </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
-									<p>Languages that I am proficient in: C#, C++. Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</p>
+									<p>Languages that I am proficient in:<br> C#, C++. </p>
+									<p>Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Unity</h3>
-									<p>Over 3 years of experience with Unity2D. All projects below are made using Unity2D.</p>
+									<p>Over 4 years of experience with Unity2D. All projects below are made using Unity2D.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>School</h3>
-									<p>Studied Computer Science for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA. 
-										Currently studying at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.1</p>
+									<ul>
+										<li> Currently studying at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
+										<li> Studied Computer Science for four years at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.</li>
+										<li> Studied Computer Science for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA.</li></ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
@@ -75,20 +78,54 @@
 						</div>
 					</section>
 
-					<!-- Two -->
+					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Spirit of Calamity</h2>
-									<p>A very ambitious game I've been working on for a few years now. Unfortunatly, not much code or gameplay
-										 has been implemented yet because of Unity's learning curve and working on smaller projects for experiance.
-										All code and artwork are my own.</p>
+									<p>A personal project that I have been working on since I started developing games. This is my passion project, and although I feel very motivated to
+										create this, little has been done in development just because I'm looking for more experience before I tackle the challenge of making this 
+										project a dream come true. I am not willing to share my source code for protection purposes but I can give a detailed summary of what I have 
+										done with the project by clicking on "More Details". All assets and artwork are my own.
+									</p>
 									<ul class="actions">
-										<li><a href="soc.html" class="button">Learn more</a></li>
+										<li><a href="soc.html" class="button">More Details</a></li>
 									</ul>
 								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic13.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Star Raid</h2>
+										<p>A very ambitious project that my development partner and I have been working on for the past few months. It's a top-down raid defense game we made using
+											advanced features like raycasting, lighting, crafting, and even a command line. All assets and artwork are my own.
+										</p>
+										<ul class="actions">
+											<li><a href="soc.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic14.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Bloodlust</h2>
+										<p> A project made for the Ludum Dare Game Jam #49 which is a challenge where competitors have 72 hours to create a game completely from scratch.
+											This game features dynamic AI and pathfinding using a pathfinding algorithm called A*. Also a dynamic NPC scheduling system, day and night cycle,
+											and a complete inventory system are just some of the amazing features we were able to implement in the 72 hour deadline. All assets and artwork are
+											my own.
+										</p>
+										<ul class="actions">
+											<li><a href="soc.html" class="button">More Details</a></li>
+										</ul>
+									</div>
 							</div>
 						</section>
 						<section>
@@ -96,11 +133,11 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Tiny Knight</h2>
-									<p>Current project that I'm working on to master the ropes of Unity, I have some pretty cool mechanics implemented so far like enemy AI,
-										chests and keys, and enemy pathing. Player sprites and animation are my own artwork but worldspace tilesheets are from a free 
-										<a href="https://opengameart.org/content/zelda-like-tilesets-and-sprites">OpenGameArt.org</a> asset.</p>
+									<p>A project that I have worked on to master the ropes of Unity. There are some pretty cool mechanics implemented like enemy AI,
+										chests and keys, and basic enemy pathfinding. The player's sprites and animation are my own artwork, but worldspace tilesets are from a Website
+										that offers free assets called, <a href="https://opengameart.org/content/zelda-like-tilesets-and-sprites">OpenGameArt.org</a>.</p>
 									<ul class="actions">
-										<li><a href="tiny_knight.html" class="button">Learn more</a></li>
+										<li><a href="tiny_knight.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -111,9 +148,9 @@
 								<div class="inner">
 									<h2>Angry Apple</h2>
 									<p>A smaller project that I have abandoned but it still has alot of features built into it like traps, combat, 
-										custom sprites and tilesets, and a pretty funny death animation. All code and artwork are my own.</p>
+										custom sprites and tilesets, and a pretty funny death animation. All assets and artwork are my own.</p>
 									<ul class="actions">
-										<li><a href="angry_apple.html" class="button">Learn more</a></li>
+										<li><a href="angry_apple.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -125,14 +162,14 @@
 									<h2>Smaller Projects</h2>
 									<p>A collection of smaller projects that are from tutorials and courses. Most artwork is mine but some downloaded from free game asset sources.</p>
 									<ul class="actions">
-										<li><a href="other_pj.html" class="button">Learn more</a></li>
+										<li><a href="other_pj.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 					</section>
 
-				<!-- Three -->
+				<!-- Contact -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
