--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Ryan's Portfolio</h1>
-							<p>A collection of Ryan Carpenter's development and experience with projects using the <a href="#https://unity.com/">Unity Engine</a>.</p>
+							<p>A collection of Ryan Carpenter's development and experience with projects using the <a href="#https://unity.com/">Unity Engine</a> and other mediums.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
 							</ul>
@@ -46,19 +46,21 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a Computer Science student studying at Arizona State University. My dream is to become a indie developer and start a game design business. I've been interest in creating games
-								for as long as I can remember and finally began making my dream a reality when I started developing with Unity at 18 year old. </p>
+							<p>Hi, I am a Computer Science undergraduate student studying at Arizona State University. My dream is to become a indie developer and start a game design business.
+								 I've had a passion in creating games for as long as I can remember and am commited to the projects I create.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
-									<p>Languages that I am proficient in:<br> C#, C++. </p>
-									<p>Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</p>
+									<li>Languages that I am proficient in:<br> C#, C++. </li>
+									<li>Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
-									<h3>Unity</h3>
-									<p>Over 4 years of experience with Unity2D. All projects below are made using Unity2D.</p>
+									<h3>Game Development</h3>
+									<li>Over 4 years of experience with the Unity Creation Engine.</li>
+									<li>Currently the Systems Officer of The Game Design Club at ASU.</li>
+									<li>Participated in multiple game jams (More info Below).</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
@@ -71,8 +73,8 @@
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
-									<p>I have previosly used <a href="https://www.adobe.com/">Adobe</a> apps for my game artwork but now all of my artwork comes from a pixel editing app called 
-										<a href="https://www.aseprite.org/">Aseprite</a>.</p>
+									<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
+									<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app I use to create game assets.</li>
 								</section>
 							</div>
 						</div>
@@ -81,34 +83,15 @@
 					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Spirit of Calamity</h2>
-									<p>A personal project that I have been working on since I started developing games. This is my passion project, and although I feel very motivated to
-										create this, little has been done in development just because I'm looking for more experience before I tackle the challenge of making this 
-										project a dream come true. I am not willing to share my source code for protection purposes but I can give a detailed summary of what I have 
-										done with the project by clicking on "More Details". All assets and artwork are my own.
-									</p>
+									<h2>Hells Kitchen</h2>
+									<p>.</p>
 									<ul class="actions">
-										<li><a href="soc.html" class="button">More Details</a></li>
+										<li><a href="angry_apple.html" class="button">More Details</a></li>
 									</ul>
 								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic13.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="content">
-									<div class="inner">
-										<h2>Star Raid</h2>
-										<p>A very ambitious project that my development partner and I have been working on for the past few months. It's a top-down raid defense game we made using
-											advanced features like raycasting, lighting, crafting, and even a command line. All assets and artwork are my own.
-										</p>
-										<ul class="actions">
-											<li><a href="soc.html" class="button">More Details</a></li>
-										</ul>
-									</div>
 							</div>
 						</section>
 						<section>
@@ -129,6 +112,37 @@
 							</div>
 						</section>
 						<section>
+							<a href="#" class="image"><img src="images/pic13.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Star Raid</h2>
+										<p>A very ambitious project that my development partner and I have been working on for the past few months. It's a top-down raid defense game we made using
+											advanced features like raycasting, lighting, crafting, and even a command line. All assets and artwork are my own.
+										</p>
+										<ul class="actions">
+											<li><a href="soc.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Spirit of Calamity</h2>
+									<p>Spirit of Calamity is personal project that I have been working on since I started developing games. This is my passion project, and although I feel very motivated to
+										create this, little has been done in development just because I'm looking for more experience before I tackle the challenge of making this 
+										project a dream come true. I am not willing to share my source code for protection purposes but I can give a detailed summary of what I have 
+										done with the project by clicking on "More Details". All assets and artwork are my own.
+									</p>
+									<ul class="actions">
+										<li><a href="soc.html" class="button">More Details</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -138,19 +152,6 @@
 										that offers free assets called, <a href="https://opengameart.org/content/zelda-like-tilesets-and-sprites">OpenGameArt.org</a>.</p>
 									<ul class="actions">
 										<li><a href="tiny_knight.html" class="button">More Details</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Angry Apple</h2>
-									<p>A smaller project that I have abandoned but it still has alot of features built into it like traps, combat, 
-										custom sprites and tilesets, and a pretty funny death animation. All assets and artwork are my own.</p>
-									<ul class="actions">
-										<li><a href="angry_apple.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
