Updates During the Trip

--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Hells Kitchen</h2>
-									<p>.</p>
+									<p>A project made with a team for the Ludum Dare Game Jam #50 which is a challenge where competitors have 72 hours to create a game completely from scratch.
+										"Our game is about a doomed cheif that must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
+										Dynamic UI, leaderboard system, cutscenes, and a level system. It was a blast working with my partners on this project, so much so 
+										that we decided to port Hell's Kitchen to mobil which is still a work in progress.
+									</p>
 									<ul class="actions">
-										<li><a href="angry_apple.html" class="button">More Details</a></li>
+										<li><a href="hells_kitchen.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -100,10 +104,9 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Bloodlust</h2>
-										<p> A project made for the Ludum Dare Game Jam #49 which is a challenge where competitors have 72 hours to create a game completely from scratch.
+										<p> A project made with a friend for the Ludum Dare Game Jam treacherous#49 which is a challenge where competitors have 72 hours to create a game completely from scratch.
 											This game features dynamic AI and pathfinding using a pathfinding algorithm called A*. Also a dynamic NPC scheduling system, day and night cycle,
-											and a complete inventory system are just some of the amazing features we were able to implement in the 72 hour deadline. All assets and artwork are
-											my own.
+											and a complete inventory system are just some of the amazing features we were able to implement in the 72 hour deadline.
 										</p>
 										<ul class="actions">
 											<li><a href="soc.html" class="button">More Details</a></li>
@@ -127,6 +130,18 @@
 							</div>
 						</section>
 						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Space Journey</h2>
+									<p>..</p>
+									<ul class="actions">
+										<li><a href="space_journey.html" class="button">More Details</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -138,20 +153,6 @@
 									</p>
 									<ul class="actions">
 										<li><a href="soc.html" class="button">More Details</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Tiny Knight</h2>
-									<p>A project that I have worked on to master the ropes of Unity. There are some pretty cool mechanics implemented like enemy AI,
-										chests and keys, and basic enemy pathfinding. The player's sprites and animation are my own artwork, but worldspace tilesets are from a Website
-										that offers free assets called, <a href="https://opengameart.org/content/zelda-like-tilesets-and-sprites">OpenGameArt.org</a>.</p>
-									<ul class="actions">
-										<li><a href="tiny_knight.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
