Hell's Kitchen Implementation w/o gifs

--- a/hells_kitchen.html
+++ b/hells_kitchen.html
@@ -20,9 +20,11 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
-						<li><a href="tiny_knight.html">Tiny Knight</a></li>
-						<li><a href="angry_apple.html" class="active">Angry Apple</a></li>
+						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="bloodlust.html">Bloodlust</a></li>
+						<li><a href="star_raid.html" class="active">Star Raid</a></li>
+						<li><a href="space_journey.html">Space Journey</a></li>
+						<li><a href="other_pj.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -34,13 +36,40 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Hells Kitchen</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>.
+							<h1 class="major">Hell's Kitchen</h1>
+							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
+							<span class="image fit"><img src="images/hk_cutscene.gif" alt="" /></span>
+							<h2>Summary</h2>
+							<p>Hells Kitchen is a game I made with a small team of programmers for the contest Ludum Dare #50. Ludum Dare is a contest where you are given 72 hours to
+								create a small game based on a particular theme. The theme choosen for this jam was "Every 10 Seconds" so we decided to create a cooking game where Every
+								10 seconds a new customer comes in. To put a spin on genre we decided to make the game Hell Themed where the player must serve demons in order to survive.
 							</p>
-							<p>.</p>
+							<span class="image fit"><img src="images/hk_gameplay.gif" alt="" /></span>
+							<h2>Gameplay</h2>
+							<p>As the player, you are given 5 stars at the beginning and you will lose stars by not serving customers in the time given. There are six stools which can
+								can each house a demon, once the demon approaches their stool an order will appear as a ticket on the left. The game is endless and you must try to survive 
+								as long as you can and try to get a high score.
+							</p>
+							<h2>Implemented Features</h2>
+							<span>
+								<ul style="width:40%; float:left;">
+									<li>Interactable UI</li>
+									<li>Global Leaderboard System</li>
+									<li>Options Menu</li>
+									<li>Crafting System</li>
+								 </ul>
+							  
+								 <ul style="width:40%; float:left;">
+									<li>Dynamic Particle Systems</li>
+									<li>Intro Cutscene</li>
+									<li>Save System</li>
+									<li>Music and Sound</li>
+								 </ul>
+							</span>
+							<br>
+							<br>
 							<ul class="icons">
-								<li>Repository Link - <a href="https://github.com/MaDness1184/Angry-Apple-PTE-" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Link to Prototype - <a href="https://madness1184.itch.io/hells-kitchen">https://madness1184.itch.io/hells-kitchen</span></a></li>
 							</ul>
 						</div>
 					</section>
