--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic15.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Hells Kitchen</h2>
+									<h2>Hell's Kitchen</h2>
 									<p>A project made with a team for the Ludum Dare Game Jam #50 which is a challenge where competitors have 72 hours to create a game completely from scratch.
 										"Our game is about a doomed cheif that must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
 										Dynamic UI, leaderboard system, cutscenes, and a level system. It was a blast working with my partners on this project, so much so 
@@ -134,7 +134,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Space Journey</h2>
-									<p>..</p>
+									<p>.</p>
 									<ul class="actions">
 										<li><a href="space_journey.html" class="button">More Details</a></li>
 									</ul>
