--- a/hells_kitchen.html
+++ b/hells_kitchen.html
@@ -51,6 +51,55 @@
 								as long as you can and try to get a high score.
 							</p>
 							<h2>Implemented Features</h2>
+							<div class="table-wrapper">
+								<table>
+									<thead>
+										<tr>
+											<th>Name</th>
+											<th>Description</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Dynamic UI</td>
+											<td>Menu UI where the player can navigate through game elements. Ticket UI that shows the player 
+												the demon's order.
+											</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Global Leaderboard System</td>
+											<td>Leaderboard system that uses a web service to display a global leaderboard of all players who've played the game.</td>
+										</tr>
+										<tr>
+											<td>Options Menu</td>
+											<td>Menu to tweak sound and music volume.</td>
+										</tr>
+										<tr>
+											<td>Crafting System</td>
+											<td>Scalable system that allows the player to mix and match ingrediants to make meals.</td>
+										</tr>
+										<tr>
+											<td>Dynamic Particle Systems</td>
+											<td>Noise particle system for cooking effects: Steam Particles, Cauldron Particles, Bubble Particles.</td>
+										</tr>
+										<tr>
+											<td>Intro Cutscene</td>
+											<td>Satan Cutscene with typewriter effect and shake effect.</td>
+										</tr>
+										<tr>
+											<td>Save System</td>
+											<td>File save for high score</td>
+										</tr>
+										<tr>
+											<td>Music and Sound</td>
+											<td>Sounds found from free website and mixed. <a href="https://madness1184.itch.io/hells-kitchen">https://opengameart.org/</span></a></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+
+							<!--
 							<span>
 								<ul style="width:40%; float:left;">
 									<li>Interactable UI</li>
@@ -66,6 +115,7 @@
 									<li>Music and Sound</li>
 								 </ul>
 							</span>
+							-->
 							<br>
 							<br>
 							<ul class="icons">
