--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 											and a complete inventory system are just some of the amazing features we were able to implement in the 72 hour deadline.
 										</p>
 										<ul class="actions">
-											<li><a href="soc.html" class="button">More Details</a></li>
+											<li><a href="bloodlust.html" class="button">More Details</a></li>
 										</ul>
 									</div>
 							</div>
