Update to Star Raid - Home Page

--- a/bloodlust.html
+++ b/bloodlust.html
@@ -21,8 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
-						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html" class="active">Star Raid</a></li>
+						<li><a href="bloodlust.html" class="active">Bloodlust </a></li>
+						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="space_journey.html">Space Journey</a></li>
 						<li><a href="other_pj.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
