--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Star Raid</h2>
-										<p>A very ambitious project that my development partner and I have been working on for the past few months. It's a top-down raid defense game we made using
-											advanced features like raycasting, lighting, crafting, and even a command line. All assets and artwork are my own.
+										<p>Star Raid was a very ambitios project that I've developed with my friend. Unfortunately developement for the game had stopped
+											due to other responsibilities and wanting to move forward with other projects. This game was centered around co-op gameplay and
+											featured P2P client based multiplayer. This game also had multiple great features like a crafting system, A* pathfinding for
+											enemies, and raycasting projectiles.
 										</p>
 										<ul class="actions">
 											<li><a href="soc.html" class="button">More Details</a></li>
