--- a/hells_kitchen.html
+++ b/hells_kitchen.html
@@ -20,9 +20,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="hells_kitchen.html "class="active">Hell's Kitchen</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html" class="active">Star Raid</a></li>
+						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="space_journey.html">Space Journey</a></li>
 						<li><a href="other_pj.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
